<resources>

    <!-- Permissions -->
    <string name="thanks">Thank You :)</string>
    <string name="no_permission">No permissions, no party :P</string>

    <!-- Board -->
    <string name="app_name">SBboard</string>
    <string name="hint">Hint</string>
    <string name="how">Use the QS tile or a notification, or both, to add a shortcut to SBboard on status bar :D</string>
    <string name="board_title">Change board title</string>
    <string name="board_alpha">Board alpha:&#160;</string>
    <string name="immersive_title">Immersive mode</string>
    <string name="immersive_on" translatable="false">ON</string>
    <string name="immersive_off" translatable="false">OFF</string>
    <string name="notification_title">Add shortcut to status bar</string>
    <string name="notification_sum">Use a notification on status bar as a shortcut to SBboard</string>
    <string name="notification_content">Click to open SBboard</string>
    <string name="shortcut_title">Add home shortcut</string>
    <string name="shortcut_sum">Add a shortcut to the home if supported by the launcher</string>

    <!-- Notes -->
    <string name="u_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="notes">Notes</string>
    <string name="add">Add</string>
    <string name="note_title">Title goes here&#8230;</string>
    <string name="note_body">Body goes here&#8230;</string>
    <string name="note_priority">Priority</string>
    <string name="copied">Note copied to clipboard</string>
    <string name="share_with">Share with&#8230;</string>
    <string name="share">Share</string>

    <!-- Contacts -->
    <string name="contacts">Frequent contacts</string>
    <string name="choose_number">Choose number</string>

    <!-- Options -->
    <string name="options">Options</string>
    <string name="about" translatable="false">About</string>

    <!-- About -->
    <string name="privacy_policy" translatable="false">Privacy policy</string>
    <string name="privacy_policy_sum">Click to read the policy about requested permissions</string>
    <string name="privacy_policy_link" translatable="false">https://raw.githubusercontent.com/enricocid/SBboard/master/policy</string>
    <string name="git">Source code</string>
    <string name="git_link" translatable="false">https://github.com/enricocid/SBboard</string>

    <!-- Theme -->
    <string name="pref_theme_title">Accent color</string>
    <string name="themesum">Change the accent color</string>
    <string name="pref_theme_list" translatable="false">pref_theme_list</string>
    <string name="default_theme">Default</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deepPurple">Deep purple</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="lightBlue">Light blue</string>
    <string name="cyan">Cyan</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="amber">Amber</string>
    <string name="orange">Orange</string>
    <string name="deepOrange">Deep orange</string>
    <string name="brown">Brown</string>
    <string name="blueGrey">Blue grey</string>

</resources>
