<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:enabled="false"
        android:title="@string/hint"
        android:summary="@string/how"/>

    <PreferenceCategory android:title="@string/options" />
    <com.qs.board.preferences.ThemePreference
        android:defaultValue="0"
        android:key="pref_chooseAccent"
        android:persistent="true"
        android:title="@string/pref_theme_title" />

    <com.qs.board.preferences.SeekBarPreference android:key="pref_alphaValue" />

    <EditTextPreference
        android:key="pref_boardTitle"
        android:title="@string/board_title" />

    <CheckBoxPreference
        android:key="pref_immersiveMode"
        android:defaultValue="true"
        android:title="@string/immersive_title"
        android:summaryOn="@string/immersive_on"
        android:summaryOff="@string/immersive_off"/>

    <Preference
        android:key="pref_addNotification"
        android:title="@string/notification_title"
        android:summary="@string/notification_sum"/>

    <PreferenceCategory android:title="@string/about" />

    <Preference
        android:title="@string/git"
        android:summary="@string/git_link">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/git_link" />
    </Preference>

    <Preference
        android:title="@string/privacy_policy"
        android:summary="@string/privacy_policy_sum">
    <intent android:action="android.intent.action.VIEW"
        android:data="@string/privacy_policy_link" />
    </Preference>

</PreferenceScreen>
