<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contactsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/contacts"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Contacts RecyclerView -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/contactsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notesCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/notes"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add_circle" />
        </RelativeLayout>
        <!-- Notes RecyclerView -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </LinearLayout>
</LinearLayout>